fixed visibility on modals by adding a class and putting it everywhere. Seriously.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,9 +1,9 @@
 
 /* All Pages */
-a {
+.a-links {
    color: white; 
   } 
-a:hover {
+.a-links:hover {
    color: white; 
   } 
 h1 {
